src/test/deca/context/invalid/instanceof-notClass.deca
{
    int a;
    a instanceof float;
}
